Step 4 (CRUD finctionality via Alchemy)
step 4 commit point (formal update for .gitignore)

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 database/README.txt
 database/__pycache__
 
+static/panda_garden.jpg
+database/back_restaurantmenu.db
+
 
 full_stack.txt
 flask.txt
