Step 8.1 (Hosting test run)
commit for push to heroku hosting without interference of database
content during further push commits

updated: README.txt (solved issue 1)
         .gitignore (added database file in list)
renamed: modules with database CLI

--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,11 @@
 /server_back
 database/__pycache__
 
-# later tot put information about project requirements
-/readme
+# skip database file
+database/restaurantmenu.db
+
 
 # notes files
 full_stack.txt
 flask.txt
-restaurantmenu.db
+
