Step 8.2 (upload function and hosting run)
added: form to select and method to upload logo files
       folder: static/logos,
       format: logo_rest_idN, N=id
       (solved issue 2)
updated: *logo filename moved to Restaurant attribut =>
           - possible to set different images types
           - no logo missing if change restaurant name (solved issue 3)
         * changed template (way of links) to logo files (more simple)
         * if delete restaurant - log file deleted also (solved issue 4)
         * README.txt file with current status
         * .gitignore, added path 'static/logos'
fixed: * all path in webserver_flask and database_setup
         setting/merging are done via os.path (more correct)
       * added loop to recover logonames in records after DB reset
removed: all logos from repo

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,9 @@
 /server_back
 database/__pycache__
 
-# skip database file
+# skip database file and logos
 database/restaurantmenu.db
+/static/logos
 
 
 # notes files
